# adventofcode2023

./: Cargo.toml  README.md
data/: day05-test2.txt  day06.txt  day07.txt  day10.txt  day11.txt  day16.txt  day17.txt  day19.txt  day20-test2.txt  day20.txt  day23.txt  day24.txt  day25-graphviz-script.sfdp  day25.txt
src/: days.rs  lib.rs  main.rs  types.rs
src/days/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_test.rs
src/types/: coord_2d.rs
tests/: coord2d_tests.rs  lib_tests.rs
