[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alex-lib = { version = "0.1.0", path = "../../rust-alex-lib" }
itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
regex = "1.10.2"
